src/test/resources/errors/WellDefinednessErrorFunctionAssignment.mch
MACHINE WellDefinednessErrorFunctionAssignment
VARIABLES f
INVARIANT f : 1..2 +-> 1..3
INITIALISATION f := {}
OPERATIONS
foo = f(1):= 1
END